--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lint-staged": "^10.5.4",
     "postcss": "^8.2.8",
     "prettier": "2.2.1",
+    "react-icons": "^4.2.0",
     "tailwindcss": "^2.0.4",
     "typescript": "^4.2.3"
   }
